--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
-    "rxjs": "~7.4.0",
+    "rxjs": "^7.5.4",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
